# qfin-option-pricer

./: .gitignore  CMakeLists.txt  README.md
include/option_pricing/: black_scholes.hpp
src/: black_scholes.cpp  main.cpp
tests/: test_black_scholes.cpp
